--- a/student_portfolio_template.html
+++ b/student_portfolio_template.html
@@ -255,18 +255,18 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.1 PROFILE & BRANDING VARIABLES (REQUIRED)
         const profileData = {
-            studentName: "Riley Cardinal",
-            tagline: "Future-Focused Problem Solver in Digital Media",
-            currentYear: "Sophomore", // Freshman, Sophomore, Junior, Senior
-            major: "Computer Science & Digital Media",
-            gpa: 3.85,
+            studentName: "Addie Mitchell",
+            tagline: "Leading Hospitality: Optimizing Processes, Inspiring Teams",
+            currentYear: "Freshman", // Freshman, Sophomore, Junior, Senior
+            major: "Hospitality Innovation and Leadership",
+            gpa: 3.0,
             impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
             
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=RILEY+C", // Replace with a URL to a professional headshot
             logoUrl: "https://placehold.co/40x40/BA0C2F/FFFFFF.png?text=BSU", // URL for your school logo or personal brand icon
-            personalBio: "I am a sophomore driven by the intersection of computational thinking and creative design. My academic focus is on building scalable, user-centric web applications and leveraging data analysis to inform design decisions. I believe in continuous learning and applying classroom theory to immediate, impactful real-world challenges.",
-            missionStatement: "To build digital solutions that simplify complex processes and empower small businesses, leveraging Python, front-end frameworks, and a user-first design approach.",
+            personalBio: "I am Addie Mitchell, a student at Ball State University pursuing a degree in Hospitality Innovation and Leadership. My academic focus lies at the intersection of operational excellence and team leadership, where I leverage technology and data analysis to streamline complex processes and drive organizational change. I am passionate about moving beyond traditional methods to find innovative solutions that improve efficiency and enhance value for both customers and internal stakeholders. My work emphasizes the ability to map, analyze, and optimize workflows, turning high-level business challenges into actionable, measurable improvements.",
+            missionStatement: "To leverage principles of innovation and process management to design efficient, user-centric organizational systems, ensuring that leadership and technology are seamlessly integrated to drive sustainable operational excellence.",
         };
 
         /*
@@ -289,12 +289,12 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
         const projectData = [
             {
-                title: "Local Charity Website Redesign",
-                category: "Design",
-                challenge: "The local Humane Society site was not mobile-friendly, resulting in high bounce rates on the donation page.",
-                solution: "Designed and implemented a responsive, user-centered interface using HTML, Tailwind CSS, and vanilla JS.",
-                result: "Increased mobile conversion rate by **15%** and reduced bounce rate by **22%** in the first month.",
-                link: "https://github.com/riley/charity-site"
+                title: "Cardinal Bookstore Workflow Optimization Initiative",
+                category: "Process Optimization",
+                challenge: "The Ball State Cardinal Bookstore relied on manual, outdated procedures for inventory and order fulfillment, resulting in high potential for data entry errors, slow processing times, and poor resource utilization.",
+                solution: "Conducted comprehensive AS-IS analysis and designed a TO-BE workflow model. Proposed a future state utilizing a digitized, centralized inventory management system to automate stock tracking and fulfillment steps.",
+                result: "The proposed model is projected to reduce average transaction processing time by an estimated **15%** and significantly enhance data accuracy. Demonstrated technical proficiency by managing all project documentation and version control",
+                link: "https://github.com/AddieMitchell/CardinalBookstore-ISOM"
             },
             {
                 title: "Twitter Sentiment Analyzer (Academic)",
@@ -576,3 +576,4 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
