Modify output to display 'Goodbye World'

--- a/student_portfolio_template.html
+++ b/student_portfolio_template.html
@@ -279,11 +279,12 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Python Programming", grade: "A", semester: "Fall 2024", relevance: "Code" },
-            { name: "Digital Design Principles", grade: "A-", semester: "Fall 2024", relevance: "Design" },
-            { name: "Calculus I", grade: "B+", semester: "Fall 2024", relevance: "Foundational" },
-            { name: "Web Development (Front-End)", grade: "A", semester: "Spring 2025", relevance: "Code" },
-            { name: "Data Structures", grade: "In Progress", semester: "Current", relevance: "Code" },
+            { name: "Intro to Business Aynalytics", grade: "B-", semester: "Fall 2025", relevance: "Process/ISOM" },
+            { name: "Financial Accounting", grade: "C", semester: "Fall 2025", relevance: "Data/Foundational" },
+            { name: "Intro to Miller College", grade: "C+", semester: "Fall 2025", relevance: "Foundational" },
+            { name: "Intro to Hospitality", grade: "B-", semester: "Fall 2025", relevance: "Innovation/HIL" },
+            { name: "Macroeconomics", grade: "D", semester: "Fall 2025", relevance: "Foundational" },
+           
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -297,32 +298,32 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 link: "https://github.com/AddieMitchell/CardinalBookstore-ISOM"
             },
             {
-                title: "Twitter Sentiment Analyzer (Academic)",
-                category: "Code",
-                challenge: "Required to analyze public sentiment towards a political topic using programming tools for a final project.",
-                solution: "Used Python (Pandas/Matplotlib) to clean data and built a basic Naive Bayes classification model.",
-                result: "Achieved **82%** accuracy in classifying positive/negative tweets, earning the highest grade in the class (A).",
-                link: ""
+                title: "Contactless Guest Check-In System Pilot",
+                category: "Service Innovation & UX",
+                challenge: "Analyzed a model hospitality operation that experienced long customer wait times and inconsistent service quality during peak check-in periods, leading to lower customer satisfaction scores.",
+                solution: "Developed a conceptual system design for a mobile-first, contactless check-in/reservation process. This design integrated QR codes and automated communication triggers, optimizing the customer journey map.",
+                result: "The proposed system is projected to reduce average guest interaction time by **40%**, freeing up staff to focus on high-value service opportunities and directly boosting customer satisfaction metrics.",
+                link: "https://github.com/AddieMitchell/Contactless-Checkin-UX"
             },
             {
-                title: "3D Planet Rendering",
-                category: "Code/Personal",
-                challenge: "A personal challenge to learn a new visualization library (three.js) over winter break.",
-                solution: "Created a simple animated model of a rotating planet using three.js, demonstrating coordinate system mastery.",
-                result: "Successfully rendered complex geometry and optimized the animation loop to maintain **60 FPS** on desktop browsers.",
-                link: "https://riley.github.io/planet-render"
+                title: "Team Performance Tracking and Training Proposal",
+                category: "HR Systems & Data Analytics",
+                challenge: "Observed a common challenge in quick-service environments: high staff turnover and poor service consistency resulting from informal, untracked on-the-job training methods.",
+                solution: "Developed a basic **proof-of-concept system** using spreadsheet logic to track essential training steps and basic performance metrics (e.g., speed of service) for new employees.",
+                result: "The proposed digital tracking tool provided a foundation for management to clearly identify training gaps, with a goal of reducing new staff ramp-up time by approximately **20%** based on initial modeling.",
+                link: "https://github.com/AddieMitchell/Hospitality-Training-Analytics"
             }
         ];
 
         // 1.4 EXPERIENCE & AWARDS (REQUIRED)
         const recognitionData = {
             experience: [
-                { title: "Team Lead, Ball State Hackathon", type: "Extracurricular", duration: "Oct 2025", detail: "Led a four-person team to develop a functional prototype in **24 hours**." },
-                { title: "Library Volunteer (IT Support)", type: "Community Service", duration: "Jan - May 2025", detail: "Provided **40+ hours** of technical support for public computers and staff devices." },
+                { title: ""
+                { title: "" },
             ],
             awards: [
-                { title: "Dean's List", duration: "Fall 2024", detail: "Achieved a **3.8 GPA**." },
-                { title: "Rising Star Freshman Award", duration: "Spring 2025", detail: "Recognized by the CS department for high academic achievement and engagement." },
+                { title: "" },
+                { title: "" },
             ]
         };
 
@@ -576,4 +577,5 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
